// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterExists /> should select "Exists" 1`] = `
.emotion-18 {
  background-color: #252525;
  border-radius: 2px;
  padding: 1px;
  border: 1px solid transparent;
}

.emotion-18:hover {
  border: 1px solid #808080;
}

.emotion-18:hover div svg {
  visibility: visible;
}

.emotion-10 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 h4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  width: 100%;
  font-weight: 400;
  padding-right: 12px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-9 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Roboto Mono;
  padding-left: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #73b61c;
}

.emotion-5[aria-disabled=true] {
  color: #808080;
}

.emotion-5:hover {
  background-color: #3b3b3b;
}

.emotion-5:hover svg {
  color: #ffffff;
}

.emotion-4 {
  visibility: hidden;
}

.emotion-17 {
  width: 100%;
  background-color: #191919;
}

.emotion-16 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-15 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #808080;
  border-radius: 2px;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: #808080;
  color: #ffffff;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-12:hover {
  color: #ffffff;
}

.emotion-11 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: transparent;
  color: #808080;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-11:hover {
  color: #ffffff;
}

.emotion-14 {
  color: #808080;
  text-align: center;
  padding: 8px;
}

<div
  className="emotion-18"
>
  <div
    className="emotion-10"
  >
    <button
      aria-label="Collapse Section"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-0"
        color="#808080"
        data-file-name="chevron.svg"
        width={20}
      />
    </button>
    <h4
      className="emotion-9"
    >
      <div
        className="emotion-8"
      >
        <svg
          color="#73b61c"
          data-file-name="missing.svg"
          width={20}
        />
        <div
          className="emotion-3"
        >
          <span
            className="emotion-2"
          >
            location.point
          </span>
        </div>
        <button
          aria-label="Disable Filter"
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-4"
            color="#808080"
            data-file-name="hidden.svg"
            width={20}
          />
        </button>
        <button
          aria-label="Delete Filter"
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-4"
            color="#808080"
            data-file-name="cross.svg"
            width={20}
          />
        </button>
      </div>
    </h4>
  </div>
  <div
    className="emotion-17"
  >
    <div
      className="emotion-16"
    >
      <FiltersReset
        assetId=""
        filter={
          Object {
            "attribute": "location.point",
            "type": "exists",
            "values": Object {
              "exists": false,
            },
          }
        }
        filterIndex={0}
        filters={
          Array [
            Object {
              "attribute": "location.point",
              "type": "exists",
              "values": Object {
                "exists": false,
              },
            },
          ]
        }
        onReset={[Function]}
        projectId="76917058-b147-4556-987a-0a0f11e46d9b"
      />
      <div
        className="emotion-15"
      >
        <div
          className="emotion-13"
        >
          <button
            className="emotion-11"
            onClick={[Function]}
            type="button"
          >
            Exists
          </button>
          <button
            className="emotion-12"
            onClick={[Function]}
            type="button"
          >
            Missing
          </button>
        </div>
        <div
          className="emotion-14"
        >
          <span>
            Show assets 
            <u>
              missing
            </u>
             the field "
            location.point
            "
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilterExists /> should select "Missing" 1`] = `
.emotion-18 {
  background-color: #252525;
  border-radius: 2px;
  padding: 1px;
  border: 1px solid transparent;
}

.emotion-18:hover {
  border: 1px solid #808080;
}

.emotion-18:hover div svg {
  visibility: visible;
}

.emotion-10 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 h4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  width: 100%;
  font-weight: 400;
  padding-right: 12px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-9 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: Roboto Mono;
  padding-left: 8px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #73b61c;
}

.emotion-5[aria-disabled=true] {
  color: #808080;
}

.emotion-5:hover {
  background-color: #3b3b3b;
}

.emotion-5:hover svg {
  color: #ffffff;
}

.emotion-4 {
  visibility: hidden;
}

.emotion-17 {
  width: 100%;
  background-color: #191919;
}

.emotion-16 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-15 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #808080;
  border-radius: 2px;
}

.emotion-11 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: #808080;
  color: #ffffff;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-11:hover {
  color: #ffffff;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: transparent;
  color: #808080;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-12:hover {
  color: #ffffff;
}

.emotion-14 {
  color: #808080;
  text-align: center;
  padding: 8px;
}

<div
  className="emotion-18"
>
  <div
    className="emotion-10"
  >
    <button
      aria-label="Collapse Section"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-0"
        color="#808080"
        data-file-name="chevron.svg"
        width={20}
      />
    </button>
    <h4
      className="emotion-9"
    >
      <div
        className="emotion-8"
      >
        <svg
          color="#73b61c"
          data-file-name="exists.svg"
          width={20}
        />
        <div
          className="emotion-3"
        >
          <span
            className="emotion-2"
          >
            location.point
          </span>
        </div>
        <button
          aria-label="Disable Filter"
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-4"
            color="#808080"
            data-file-name="hidden.svg"
            width={20}
          />
        </button>
        <button
          aria-label="Delete Filter"
          className="emotion-5"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-4"
            color="#808080"
            data-file-name="cross.svg"
            width={20}
          />
        </button>
      </div>
    </h4>
  </div>
  <div
    className="emotion-17"
  >
    <div
      className="emotion-16"
    >
      <FiltersReset
        assetId=""
        filter={
          Object {
            "attribute": "location.point",
            "type": "exists",
            "values": Object {
              "exists": true,
            },
          }
        }
        filterIndex={0}
        filters={
          Array [
            Object {
              "attribute": "location.point",
              "type": "exists",
              "values": Object {
                "exists": true,
              },
            },
          ]
        }
        onReset={[Function]}
        projectId="76917058-b147-4556-987a-0a0f11e46d9b"
      />
      <div
        className="emotion-15"
      >
        <div
          className="emotion-13"
        >
          <button
            className="emotion-11"
            onClick={[Function]}
            type="button"
          >
            Exists
          </button>
          <button
            className="emotion-12"
            onClick={[Function]}
            type="button"
          >
            Missing
          </button>
        </div>
        <div
          className="emotion-14"
        >
          <span>
            Show assets with the field "
            location.point
            "
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
